k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-pvc
