k8s/ingress.yaml
apiVersion: networking.k8s/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /gateway
        backend:
          serviceName: gateway
          servicePort: 8080
